<resources>
    <string name="app_name">NotyNote</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_yet_registered_signup">Not yet registered? Signup</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_an_user_login">Already an user? Login now</string>
    <string name="reset_password">Reset password</string>
    <string name="you_can_type_here">You can type here...</string>
    <string name="title">Title.....</string>
</resources>